--- a/src/main/resources/web_crawler/webcrawler/slave.fxml
+++ b/src/main/resources/web_crawler/webcrawler/slave.fxml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="web_crawler.webcrawler.slaveController">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text layoutX="227.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This is the slave page" />
+      <Text fx:id="ipAddressText" layoutX="131.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP ADDRESS: 1412412">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Text layoutX="131.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Port:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <TextField fx:id="portInput" accessibleText="Write number here" layoutX="232.0" layoutY="175.0" prefHeight="39.0" prefWidth="117.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Button layoutX="360.0" layoutY="175.0" mnemonicParsing="false" onAction="#runSlave" prefHeight="39.0" prefWidth="109.0" text="Run Slave">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
