--- a/src/main/resources/web_crawler/webcrawler/slave.fxml
+++ b/src/main/resources/web_crawler/webcrawler/slave.fxml
@@ -6,23 +6,23 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="web_crawler.webcrawler.slaveController">
+<AnchorPane prefHeight="150.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="web_crawler.webcrawler.slaveController">
    <children>
-      <Text fx:id="ipAddressText" layoutX="131.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP ADDRESS: 1412412">
+      <Text fx:id="ipAddressText" layoutX="26.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP ADDRESS: 255.255.255.255">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Text layoutX="131.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Port:">
+      <Text layoutX="26.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Port:">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField fx:id="portInput" accessibleText="Write number here" layoutX="232.0" layoutY="175.0" prefHeight="39.0" prefWidth="117.0">
+      <TextField fx:id="portInput" accessibleText="Write number here" layoutX="124.0" layoutY="74.0" prefHeight="39.0" prefWidth="117.0">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button layoutX="360.0" layoutY="175.0" mnemonicParsing="false" onAction="#runSlave" prefHeight="39.0" prefWidth="109.0" text="Run Slave">
+      <Button layoutX="264.0" layoutY="74.0" mnemonicParsing="false" onAction="#runSlave" prefHeight="39.0" prefWidth="109.0" text="Run Slave">
          <font>
             <Font size="18.0" />
          </font>
