--- a/src/main/resources/web_crawler/webcrawler/slave.fxml
+++ b/src/main/resources/web_crawler/webcrawler/slave.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="150.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="web_crawler.webcrawler.slaveController">
+<AnchorPane prefHeight="411.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="web_crawler.webcrawler.slaveController">
    <children>
       <Text fx:id="ipAddressText" layoutX="26.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="IP ADDRESS: 255.255.255.255">
          <font>
@@ -27,5 +28,6 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <TextArea fx:id="updates" editable="false" layoutX="24.0" layoutY="130.0" prefHeight="261.0" prefWidth="350.0" />
    </children>
 </AnchorPane>
